<?xml version="1.0" encoding="utf-8"?><!--隐私设置-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:gravity="center_vertical"
        android:text="@string/private_setting_who_can_see"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/privacySetting_allTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:background="@drawable/bg_line_top_bottom"
        android:drawableRight="@drawable/icon_is_choose"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/all_margrin"
        android:paddingRight="@dimen/all_margrin"
        android:text="@string/private_setting_all"
        android:textColor="@color/common_black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/privacySetting_attentionTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:background="@color/white"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/all_margrin"
        android:paddingRight="@dimen/all_margrin"
        android:text="@string/private_setting_only_attention"
        android:textColor="@color/common_black"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/privacySetting_onlyMyselfTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:background="@drawable/bg_line_top_bottom"
        android:gravity="left|center_vertical"
        android:paddingLeft="@dimen/all_margrin"
        android:paddingRight="@dimen/all_margrin"
        android:text="@string/private_setting_only_myself"
        android:textColor="@color/common_black"
        android:textSize="@dimen/text_size" />

</LinearLayout>