<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainActivity">

    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/frameMenu"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/frameMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/layout_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/skin_tabbar_icon_main_at_select"
            android:gravity="center"
            android:text="@string/main"
            android:drawablePadding="2dp"
            android:textColor="@color/btn_home_menu"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/layout_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/skin_tabbar_icon_activity_at_select"
            android:gravity="center"
            android:text="@string/activity"
            android:drawablePadding="2dp"
            android:textColor="@color/btn_home_menu"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2" />

        <TextView
            android:id="@+id/layout_douji"
            android:layout_width="0dp"
            android:drawablePadding="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/skin_tabbar_icon_douji_at_select"
            android:gravity="center"
            android:text="@string/doucha"
            android:textColor="@color/btn_home_menu"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/layout_member"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/skin_tabbar_icon_member_at_select"
            android:gravity="center"
            android:drawablePadding="2dp"
            android:text="@string/member_text"
            android:textColor="@color/btn_home_menu"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/plus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:src="@drawable/main_buttom_center_btn" />

</RelativeLayout>
