<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/findPw_tipTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_20dp"
        android:layout_marginLeft="@dimen/all_margrin"
        android:layout_marginTop="@dimen/activity_20dp"
        android:text="@string/input_my_account_number"
        android:textColor="@color/common_black"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/all_margrin"
        android:layout_marginRight="@dimen/all_margrin"
        android:background="@drawable/bg_rectangle_white_coner"
        android:orientation="vertical">

        <EditText
            android:id="@+id/findPw_topEdt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:background="@null"
            android:drawableLeft="@drawable/find_pwd_username_icon"
            android:drawablePadding="@dimen/activity_15dp"
            android:gravity="center_vertical|left"
            android:hint="@string/phonenumber_or_email"
            android:paddingLeft="@dimen/activity_15dp"
            android:paddingRight="@dimen/all_margrin"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_size" />

        <View style="@style/divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/findPw_bottomEdt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/icon_code"
                android:drawablePadding="@dimen/activity_15dp"
                android:hint="验证码"
                android:paddingLeft="@dimen/activity_15dp"
                android:paddingRight="@dimen/all_margrin"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/findPw_codeTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_5dp"
                android:background="#E12929"
                android:gravity="center"
                android:paddingLeft="@dimen/all_margrin"
                android:paddingRight="@dimen/all_margrin"
                android:text="@string/getcode"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/findPw_Btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="@dimen/all_margrin"
        android:layout_marginRight="@dimen/all_margrin"
        android:layout_marginTop="@dimen/activity_30dp"
        android:background="@drawable/btn_register"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

</LinearLayout>